[package]
name = "rlox"
version = "0.1.0"
authors = ["ak4ra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["debug_trace_execution", "debug_print_code"]
debug_trace_execution = []
debug_print_code = []
